// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`File Upload  Default renders correctly 1`] = `
<jest>
  <input
    class="ecl-file-upload"
    data-ecl-auto-init="FileUpload"
    data-ecl-file-upload-input=""
    id="example-input-id-1"
    name="file-upload-name"
    required=""
    type="file"
  />
  <label
    class="ecl-file-upload__button-container"
    for="example-input-id-1"
  >
    <span
      class="ecl-file-upload__button ecl-button ecl-button--primary"
      data-ecl-file-upload-button=""
      data-ecl-file-upload-label-choose="Choose file"
      data-ecl-file-upload-label-replace="Replace file"
    >
      Choose file
    </span>
  </label>
  <ul
    class="ecl-file-upload__list"
    data-ecl-file-upload-list=""
  />
</jest>
`;

exports[`File Upload  Default renders correctly when disabled 1`] = `
<jest>
  <input
    class="ecl-file-upload"
    data-ecl-auto-init="FileUpload"
    data-ecl-file-upload-input=""
    disabled=""
    id="example-input-id-1"
    name="file-upload-name"
    required=""
    type="file"
  />
  <label
    class="ecl-file-upload__button-container"
    for="example-input-id-1"
  >
    <span
      class="ecl-file-upload__button ecl-button ecl-button--primary"
      data-ecl-file-upload-button=""
      data-ecl-file-upload-label-choose="Choose file"
      data-ecl-file-upload-label-replace="Replace file"
      disabled=""
    >
      Choose file
    </span>
  </label>
  <ul
    class="ecl-file-upload__list"
    data-ecl-file-upload-list=""
  />
</jest>
`;

exports[`File Upload  Default renders correctly when invalid 1`] = `
<jest>
  <input
    class="ecl-file-upload ecl-file-upload--invalid"
    data-ecl-auto-init="FileUpload"
    data-ecl-file-upload-input=""
    id="example-input-id-1"
    name="file-upload-name"
    required=""
    type="file"
  />
  <label
    class="ecl-file-upload__button-container"
    for="example-input-id-1"
  >
    <span
      class="ecl-file-upload__button ecl-button ecl-button--primary"
      data-ecl-file-upload-button=""
      data-ecl-file-upload-label-choose="Choose file"
      data-ecl-file-upload-label-replace="Replace file"
    >
      Choose file
    </span>
  </label>
  <ul
    class="ecl-file-upload__list"
    data-ecl-file-upload-list=""
  />
</jest>
`;

exports[`File Upload  Default renders correctly when required 1`] = `
<jest>
  <input
    class="ecl-file-upload"
    data-ecl-auto-init="FileUpload"
    data-ecl-file-upload-input=""
    id="example-input-id-1"
    name="file-upload-name"
    required=""
    type="file"
  />
  <label
    class="ecl-file-upload__button-container"
    for="example-input-id-1"
  >
    <span
      class="ecl-file-upload__button ecl-button ecl-button--primary"
      data-ecl-file-upload-button=""
      data-ecl-file-upload-label-choose="Choose file"
      data-ecl-file-upload-label-replace="Replace file"
    >
      Choose file
    </span>
  </label>
  <ul
    class="ecl-file-upload__list"
    data-ecl-file-upload-list=""
  />
</jest>
`;

exports[`File Upload  Default renders correctly with extra attributes 1`] = `
<jest>
  <input
    class="ecl-file-upload"
    data-ecl-auto-init="FileUpload"
    data-ecl-file-upload-input=""
    data-test="data-test-value"
    data-test-1="data-test-value-1"
    id="example-input-id-1"
    name="file-upload-name"
    required=""
    type="file"
  />
  <label
    class="ecl-file-upload__button-container"
    for="example-input-id-1"
  >
    <span
      class="ecl-file-upload__button ecl-button ecl-button--primary"
      data-ecl-file-upload-button=""
      data-ecl-file-upload-label-choose="Choose file"
      data-ecl-file-upload-label-replace="Replace file"
    >
      Choose file
    </span>
  </label>
  <ul
    class="ecl-file-upload__list"
    data-ecl-file-upload-list=""
  />
</jest>
`;

exports[`File Upload  Default renders correctly with extra class names 1`] = `
<jest>
  <input
    class="ecl-file-upload"
    data-ecl-auto-init="FileUpload"
    data-ecl-file-upload-input=""
    id="example-input-id-1"
    name="file-upload-name"
    required=""
    type="file"
  />
  <label
    class="ecl-file-upload__button-container"
    for="example-input-id-1"
  >
    <span
      class="ecl-file-upload__button ecl-button ecl-button--primary"
      data-ecl-file-upload-button=""
      data-ecl-file-upload-label-choose="Choose file"
      data-ecl-file-upload-label-replace="Replace file"
    >
      Choose file
    </span>
  </label>
  <ul
    class="ecl-file-upload__list"
    data-ecl-file-upload-list=""
  />
</jest>
`;

exports[`File Upload  Multiple renders correctly 1`] = `
<jest>
  <input
    class="ecl-file-upload"
    data-ecl-auto-init="FileUpload"
    data-ecl-file-upload-input=""
    id="example-file-upload-multiple"
    multiple=""
    name="file-upload-name"
    required=""
    type="file"
  />
  <label
    class="ecl-file-upload__button-container"
    for="example-file-upload-multiple"
  >
    <span
      class="ecl-file-upload__button ecl-button ecl-button--primary"
      data-ecl-file-upload-button=""
      data-ecl-file-upload-label-choose="Choose files"
      data-ecl-file-upload-label-replace="Replace files"
    >
      Choose files
    </span>
  </label>
  <ul
    class="ecl-file-upload__list"
    data-ecl-file-upload-list=""
  />
</jest>
`;
